completed lists assignment

--- a/listspractice.html
+++ b/listspractice.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul> Shopping List
+        <li> Ogbert (yogurt and granola) </li>
+        <li> Seaweed </li>
+        <li> Chicken Breasts </li>
+        <li> Almond Milk </li>
+        <li> Black Silk Folgers Coffee </li>
+    </ul>
+
+    <ol> To-Do-List for today
+        <li>Practice Coding </li>
+        <li>Clean Kitchen</li>
+        <li> Relaxation time</li>
+    </ol>
+
+    <ul> Places to Visit
+        <li>Japan</li>
+        <li>Somewhere Island-like</li>
+        <li>Dubai</li>
+    </ul>
+
+    <ol> Favorite Games
+        <li>Jak & Daxter 1</li>
+        <li>Crash Bandicoot 3</li>
+        <li>Apex Legends</li>
+        <li>Ghost of Tsushima</li>
+        <li>Kirby Nightmare in Dreamland</li>
+    </ol>
 </body>
 </html>
